--- a/tabs.html
+++ b/tabs.html
@@ -3,30 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MyFramework | Tabs</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/tabs.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/ahellya.css">
 </head>
 <body>
 	<div class="wrapper">
 		<div class="main-container">
 			<div class="container">
 				<div class="tabs">
-					<ul class="tabs-controls">
-						<li class="tabs_controls-item active">
-							<a href="#" class="tabs_controls-link">item-1</a>
-						</li>
-						<li class="tabs_controls-item">
-							<a href="#" class="tabs_controls-link">item-2</a>
-						</li>
-						<li class="tabs_controls-item">
-							<a href="#" class="tabs_controls-link">item-3</a>
-						</li>
-						<li class="tabs_controls-item">
-							<a href="#" class="tabs_controls-link">item-4</a>
-						</li>
-						<li class="tabs_controls-item">
-							<a href="#" class="tabs_controls-link">item-5</a>
-						</li>
-					</ul>
+					<div class="navigation">
+				        <div class="collapse-menu">
+				            <div class="collapsed-menu" id="toggle-menu">
+				                <span class="fa fa-bars"></span>
+				            </div>
+				        </div>
+				        <ul class="tabs-controls nav-list">
+				            <li class="tabs_controls-item active">
+				            	<a class="tabs_controls-link" href="#">Пункт 1</a>
+				            </li>
+				            <li class="tabs_controls-item">
+				            	<a class="tabs_controls-link" href="#">Пункт 2</a>
+				            </li>
+				            <li class="tabs_controls-item">
+				            	<a class="tabs_controls-link" href="#">Пункт 3</a>
+				            </li>
+				            <li class="tabs_controls-item">
+				            	<a class="tabs_controls-link" href="#">Пункт 4</a>
+				            </li>
+				            <li class="tabs_controls-item">
+				            	<a class="tabs_controls-link" href="#">Пункт 5</a>
+				            </li>
+				        </ul>
+				    </div>
 					<ul class="tabs-list">
 						<li class="tabs_item active">
 							<h2>Tab 1</h2>
@@ -55,6 +64,6 @@
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"  type="text/javascript"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.12.1.min.js"><\/script>')</script>
-	<script src="js/main.js"></script>
+	<script src="js/tabs.js"></script>
 </body>
 </html>
